--- a/monApp/templates/contact.html
+++ b/monApp/templates/contact.html
@@ -1,10 +1,8 @@
 <!doctype html>
-<html>
-    <head>
-        <link rel="stylesheet" href="{{ url_for ('static', filename ='style.css') }}">
-        <title>{{title}}</title>
-    </head>
-    <body>
-        <h1>Pour tout autres questions, veuillez nous laisser un message via notre adresse mail : bonjour@iutO.fr</h1>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block main %}
+<body >
+    <h1>Pour tout autres questions, veuillez nous laisser un message via notre adresse mail : bonjour@iutO.fr</h1>
+</body >
+{% endblock %}
