--- a/monApp/static/style.css
+++ b/monApp/static/style.css
@@ -1,10 +1,18 @@
+#main{
+    margin-top: 5em;
+}
+
+body{
+    font-family: sans-serif;
+}
+
 h1 {
     color :red;
 }
 
 td, th{
-padding: 0.5em;
-text-align: center;
-border-collapse:initial;
-border: thin solid black;
+    padding: 0.5em;
+    text-align: center;
+    border-collapse:initial;
+    border: thin solid black;
 }
