Ajout d'une view pour permettre de sauvegarder les modifications apportées à un auteur, puis d'une template auteur_update.html pour mettre en place l'action sur le formulaire. et enfin création d'une template auteur_view.html pour illustrer la vue ajoutée.

--- a/monApp/templates/auteur_update.html
+++ b/monApp/templates/auteur_update.html
@@ -2,7 +2,7 @@ ons notre formulaire à bootstrap :
 {% extends "base.html" %}
 {% block main %}
 <h1 >Modification de l'auteur {{ selectedAuteur.Nom }}</h1>
-<form role="form" method="POST" action="">
+<form role="form" method="POST" action="{{url_for('saveAuteur')}}">
     {{ updateForm.hidden_tag () }}
     <div class="form-group mb-3">
         {{ updateForm.Nom.label }}
