Ajout d'une fonctionnalité ajout d'un auteur, donc ajout de la fonctionnalité dans le menu, puis création de la vue et de la template pour permettre la réalisation de cette action, et ajout d'une autre vue insertAuteur pour validé la création.

--- a/monApp/templates/base.html
+++ b/monApp/templates/base.html
@@ -25,6 +25,7 @@
                                 <li>
                                     <a class="dropdown-item" href="{{ url_for('getAuteurs') }}">Liste des auteurs</a>
                                 </li>
+                                <li><a class="dropdown-item" href="{{ url_for('createAuteur') }}">Créer un auteur</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
