--- a/monApp/templates/base.html
+++ b/monApp/templates/base.html
@@ -30,8 +30,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="livresDropdown" role="button" data-bs-toggle="dropdown" 
-                            aria-expanded="false">Livres
-                            </a>
+                            aria-expanded="false">Livres</a>
                             <ul class="dropdown-menu" aria-labelledby="livresDropdown">
                                 <li>
                                     <a class="dropdown-item" href="{{ url_for('getLivres') }}">Liste des livres</a>
