--- a/monApp/templates/base.html
+++ b/monApp/templates/base.html
@@ -44,12 +44,26 @@
                             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
                         </li>
                     </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if current_user.is_authenticated %}
+                            <a class="navbar-brand">
+                                <em>Vous êtes connecté <strong>{{ current_user.Login }}</strong></em>
+                            </a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('logout') }}">Déconnexion</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('login') }}">Se connecter</a>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </nav>{% endblock %}
 
         {% block content %}
-        <main id="main" role="main" class="container">
+        <main id="main" role="main" class="container mt-5 pt-5">
             {% block main %}{% endblock %}
         </main>
         {% endblock %}
