--- a/monApp/templates/livre_create.html
+++ b/monApp/templates/livre_create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
 <h1>Création d'un livre</h1>
-<form role="form" method="POST" action="{{ url_for('insertLivre') }}">
+<form role="form" method="POST" action="{{ url_for('createLivre') }}">
     {{ createForm.hidden_tag() }}
     
     <div class="form-group mb-3">
